add: code refactor

--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -23,12 +23,12 @@
       "sub_total_label": "Subtotal:",
       "clear_cart_title": "Clear Cart",
       "empty_cart": "Your cart is empty",
-      "message":"looks like your shopping cart is empty, you can shop now by clicking button below",
+      "message": "looks like your shopping cart is empty, you can shop now by clicking button below",
       "add_address": "Add Address",
-      "update_address":"Update Address",
-      "update":"UPDATE",
-      "edit":"EDIT",
-      "save":"SAVE",
+      "update_address": "Update Address",
+      "update": "UPDATE",
+      "edit": "EDIT",
+      "save": "SAVE",
       "email": "Email",
       "number": "Number",
       "pin": "Pin Code",
@@ -40,29 +40,28 @@
       "add": "ADD",
       "next": "NEXT",
       "select_address_title": "Address",
-      "billing_address":"Billing Address",
-      "add_billing_address":"Add Billing Address",
-      "update_cart":"Update Cart",
-      "fulfillment":"FULFILLMENT",
-      "total_payable":"Total Payable",
-      "proceed_to_pay":"Proceed To Pay",
+      "billing_address": "Billing Address",
+      "add_billing_address": "Add Billing Address",
+      "update_cart": "Update Cart",
+      "fulfillment": "FULFILLMENT",
+      "total_payable": "Total Payable",
+      "proceed_to_pay": "Proceed To Pay",
       "checkout": "Checkout",
       "address": "Address",
       "payment_options": "Payment Options",
       "clear_cart_message": "Are you sure you want to clear cart?",
       "order_placed_message": "Your order has been placed!",
-      "shop_now":"Shop Now",
-      "payment":{
-        "title":"Payment & Order Confirmation",
-        "place_order":"Place Order",
-        "processing_label":"Processing",
-        "authentication_failed":"Please verify the details and try again",
-        "authorization_failed":"Bank is unable to process your request at the moment",
-        "juspay_declined":"Unable to process your request at the moment please try again",
-        "authorizing":"Waiting for the bank to confirm",
-        "pending_vbv":"Transaction Pending"
+      "shop_now": "Shop Now",
+      "payment": {
+        "title": "Payment & Order Confirmation",
+        "place_order": "Place Order",
+        "processing_label": "Processing",
+        "authentication_failed": "Please verify the details and try again",
+        "authorization_failed": "Bank is unable to process your request at the moment",
+        "juspay_declined": "Unable to process your request at the moment please try again",
+        "authorizing": "Waiting for the bank to confirm",
+        "pending_vbv": "Transaction Pending"
       }
-     
     },
     "dashboard": {},
     "order": {
@@ -72,14 +71,14 @@
       "return": "Return",
       "cancel": "Cancel",
       "list_empty_message": "No data found",
-      "call_me":"Call Me",
-      "track":"Track",
-      "cancelled":"Cancelled",
-      "message":"Enter the phone number on which you want us to call",
-      "placeholder":"Enter the phone number",
-      "billed_to":"Billed To:",
-      "pending":"Pending",
-      "na":"NA"
+      "call_me": "Call Me",
+      "track": "Track",
+      "cancelled": "Cancelled",
+      "message": "Enter the phone number on which you want us to call",
+      "placeholder": "Enter the phone number",
+      "billed_to": "Billed To:",
+      "pending": "Pending",
+      "na": "NA"
     },
     "product": {
       "select_location_label": "Select a location",
@@ -100,28 +99,28 @@
       "please_select_location": "Please select location",
       "add_to_cart": "Added to cart",
       "detecting_location": "Detecting Location",
-      "homepage":{
-         "fashion":"Fashion",
-         "beauty_personal_care":"Beauty and personal care",
-         "food_bevarages":"Food & Bevarages",
-         "fruites_label":"Fresh fruites and vegetables",
-         "electronics":"Electronics",
-         "home_decore":"Home Decore"
-},
+      "homepage": {
+        "fashion": "Fashion",
+        "beauty_personal_care": "Beauty and personal care",
+        "food_beverages": "Food & Beverages",
+        "fruits": "Fresh fruits and vegetables",
+        "electronics": "Electronics",
+        "home_decor": "Home Decor"
+      },
       "product_details": {
-        "manufacture_name":"Manufacture Name",
+        "manufacture_name": "Manufacture Name",
         "title": "Product Details",
-        "manufacture_date":"Manufacture Date",
-        "net_quantity":"Net Quantity",
-        "country_of_origin":"Country of Origin",
-        "brand_owner_name":"Brand Owner Name",
-        "ordering_from":"Ordering from",
-        "returnable":"Returnable",
-        "cancellable":"Cancellable",
-        "available_quantity":"Available Quantity",
-        "cash_on_elivery":"Cash On Delivery",
-        "yes":"Yes",
-        "no":"No"
+        "manufacture_date": "Manufacture Date",
+        "net_quantity": "Net Quantity",
+        "country_of_origin": "Country of Origin",
+        "brand_owner_name": "Brand Owner Name",
+        "ordering_from": "Ordering from",
+        "returnable": "Returnable",
+        "cancellable": "Cancellable",
+        "available_quantity": "Available Quantity",
+        "cash_on_elivery": "Cash On Delivery",
+        "yes": "Yes",
+        "no": "No"
       },
       "filters": {
         "filter": "Filters",
@@ -132,13 +131,13 @@
         "categories": "Categories",
         "sorting": "Sorting",
         "price_range": "Price Range",
-        "clear":"CLEAR",
-        "min":"Min",
-        "max":"Max",
-        "price_low_to_high":"Price: Low To High",
-        "price_high_to_low":"Price: High To Low",
-        "ratings_high_to_low":"Ratings: High To Low",
-        "ratings_low_to_high":"Ratings: Low To High"
+        "clear": "CLEAR",
+        "min": "Min",
+        "max": "Max",
+        "price_low_to_high": "Price: Low To High",
+        "price_high_to_low": "Price: High To Low",
+        "ratings_high_to_low": "Ratings: High To Low",
+        "ratings_low_to_high": "Ratings: Low To High"
       }
     },
     "more": {
@@ -167,7 +166,7 @@
     "unmatch_password": "Password does not match",
     "invalid_number": "Invalid number",
     "invalid_pin": "Invalid pin code",
-    "no_data_found":"No Data Found"
+    "no_data_found": "No Data Found"
   },
   "global": {
     "and_label": " and ",
