chg:payload of confirm order add:city and state to the context add:get status result in order history card add: v1.0.7 add:chips in order history card chg:items current status add:function in order history utils add: added update order integration add:api integration of update api add:filelist to the project chg:cancel ui chg:confirmation screen chg:confirmation file dlt:deleted some repeated code chg:init cancel and confirm payload add:gps co-ordinates in delivery address in init order chg:shipping details in order history add:events for get status add:pagination in products add:fullfillment object in on select add:pagination add:code to make confirmation ids null add:progress indicator chg:deleted all the logs chg:pagination add:api integration of mmi pin info api fixed:safeareaview isuue for ios chg:deleted unused hook add:isActive flag to show full cards add:api integration of status add:timer added in sse add:function to apply filters wip: URL for the server communication add:sse for track and support chg: base url in app utilities fixed:on_quote issue in update cart add: polling time add:settimeout function to remove events add:sse in shipping address for cancel add:remove event listener in useeffect add sse in payment screen add:sse in the update cart screen add: updated server URL add: update count for the search response add:sse event in useProduct list add:on search event fixed:delivery address get deselected issue add:server sent events to the app chg: calling feature chg: placeholder for products list page rmv:card from homepage item chg: locations of the order chg: refactor UI of support card add: code refactor chg:replace i18n strings with i18next chg:styles of containButton

--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -87,11 +87,14 @@
         "ordered": "Ordered",
         "shipped": "Shipped",
         "delivered": "Delivered",
-        "canceled": "Cancelled",
+        "cancelled": "Cancelled",
         "pending_confirmation": "Pending Confirmation",
         "pending": "Pending",
         "active": "Active",
-        "processing": "Processing"
+        "processing": "Processing",
+        "created":"Created",
+        "returned":"Returned",
+        "updated":"Updated"
       }
     },
     "product": {
